[project]
name = "daff"
version = "0.1.0"
description = "A small CLI tool that prints out daily affirmations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.4",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["."]
[project.scripts]
daff = "main:main"

